add css inheritce in detail only

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,7 @@
         <!-- CUSTOM -->
         <link rel="stylesheet" href="{% static 'ltr/css/main.css'%}">
         <link rel="stylesheet" href="{% static 'ltr/css/index.css'%}">
+        <link rel="stylesheet" href="{% static 'ltr/css/product-details.css' %}">
         <!--=====================================
                     CSS LINK PART END
         =======================================-->
