--- a/templates/base.html
+++ b/templates/base.html
@@ -171,7 +171,7 @@
                                     <a class="navbar-link " href="/products/brand/">Brands</a>
                                 </li>
                                 <li class="navbar-item dropdown">
-                                    <a class="navbar-link " href="#">Orders</a>
+                                    <a class="navbar-link " href="/orders">Orders</a>
                                 </li>
                             </ul>
                             <div class="navbar-info-group">
