add german language

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
         <!-- FAVICON -->
         <link rel="icon" href="images/favicon.png">
 
-        {% if LANGUAGE_CODE == 'en' %}
+        {% if LANGUAGE_CODE == 'en' or LANGUAGE_CODE == 'de'  %}
             <link rel="stylesheet" href="{% static 'ltr/fonts/flaticon/flaticon.css' %}">
             <link rel="stylesheet" href="{% static 'ltr/fonts/icofont/icofont.min.css' %}">
             <link rel="stylesheet" href="{% static 'ltr/fonts/fontawesome/fontawesome.min.css' %}">
@@ -892,7 +892,7 @@
         <!--=====================================
                     JS LINK PART START
         =======================================-->
-        {% if LANGUAGE_CODE == 'en' %}
+        {% if LANGUAGE_CODE == 'en' or LANGUAGE_CODE == 'de'  %}
             <script src="{% static 'ltr/vendor/bootstrap/jquery-1.12.4.min.js' %}"></script>
             <script src="{% static 'ltr/vendor/bootstrap/popper.min.js' %}"></script>
             <script src="{% static 'ltr/vendor/bootstrap/bootstrap.min.js' %}"></script>
