--- a/templates/base.html
+++ b/templates/base.html
@@ -193,9 +193,12 @@
                                 <li class="navbar-item dropdown-megamenu">
                                     <a class="navbar-link " href="/products/brand/">{% translate "Brands" %}</a>
                                 </li>
-                                <li class="navbar-item dropdown">
-                                    <a class="navbar-link " href="/orders">{% translate "Orders" %}</a>
-                                </li>
+                                    <li class="navbar-item dropdown">
+                                        <a class="navbar-link " href="/orders">{% translate "Orders" %}</a>
+                                    </li>
+                                    <li class="navbar-item dropdown">
+                                        <a class="navbar-link " href="/accounts/dashboard">{% translate "dashboard" %}</a>
+                                    </li>
                             </ul>
                             <div class="navbar-info-group">
                                 <div class="navbar-info">
