--- a/orders/templates/orders/checkout.html
+++ b/orders/templates/orders/checkout.html
@@ -73,31 +73,14 @@
                                 </div>
                                 <div class="chekout-coupon">
                                     <button class="coupon-btn">Do you have a coupon code?</button>
-                                    <form class="coupon-form" method="post">
+                                    <form class="coupon-form" id="couponForm" method="post">
                                         {% csrf_token %}
                                         <input type="text" name="coupon" placeholder="Enter your coupon code">
                                         <button type="submit"><span>apply</span></button>
                                     </form>
                                 </div>
-                                <div class="checkout-charge">
-                                    <ul>
-                                        <li>
-                                            <span>Sub total</span>
-                                            <span>{{sub_total}}</span>
-                                        </li>
-                                        <li>
-                                            <span>delivery fee</span>
-                                            <span>{{delivery_fee}}</span>
-                                        </li>
-                                        <li>
-                                            <span>discount</span>
-                                            <span>{{discount}}</span>
-                                        </li>
-                                        <li>
-                                            <span>Total<small>(Incl. VAT)</small></span>
-                                            <span>{{total}}</span>
-                                        </li>
-                                    </ul>
+                                <div class="checkout-charge" id="total_div">
+                                  {% include 'include/checkout_table.html' %}
                                 </div>
                             </div>
                         </div>
@@ -338,6 +321,28 @@
         <!--=====================================
                     MODAL EDIT FORM END
         =======================================-->
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+        <script>
+            // reviewForm
+            $(document).ready(function(e){
+
+                // submit reviewForm
+                $(document).on('submit','#couponForm',function(e){
+                    e.preventDefault(); // refresh
+                
+                    $.ajax({
+                        type: $(this).attr('method'),
+                        url: $(this).attr('action'),
+                        data: $(this).serialize(),
+                        datatype:'json',
+                        success:function(response){
+                            consol.log(response)
+                            $("#total_div").html(response['result']);
+                        },
+                    });
+                });
+            });
+        </script>
 
 
      
