--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -138,37 +138,13 @@
                         </div>
                         <div class="product-details-frame">
                             <h3 class="frame-title">Reviews ({{object.product_review.all|length}})</h3>
-                            <ul class="review-list">
-                                {% for review in object.product_review.all %}
-                                <li class="review-item">
-                                    <div class="review-media">
-                                        <a class="review-avatar" href="#">
-                                            <img src="images/avatar/01.jpg" alt="review">
-                                        </a>
-                                        <h5 class="review-meta">
-                                            <a href="#">{{review.user}}</a>
-                                            <span>June 02, 2020</span>
-                                            <span>{{review.create_date}}</span>
-
-                                        </h5>
-                                    </div>
-                                    <ul class="review-rating">
-                                        <li class="icofont-ui-{% if review.rate > 0 %}rating{% else %}rate-blank{% endif %}"></li>
-                                        <li class="icofont-ui-{% if review.rate > 1 %}rating{% else %}rate-blank{% endif %}"></li>
-                                        <li class="icofont-ui-{% if review.rate > 2 %}rating{% else %}rate-blank{% endif %}"></li>
-                                        <li class="icofont-ui-{% if review.rate > 3 %}rating{% else %}rate-blank{% endif %}"></li>
-                                        <li class="icofont-ui-{% if review.rate > 4 %}rating{% else %}rate-blank{% endif %}"></li>
-                                    </ul>
-                                    <p class="review-desc">{{review.review}}</p>
-                                    
-                                </li>
-                                {% endfor %}
-                                
+                            <ul class="review-list"  id="all-reviews">
+                                {% include 'include/all_reviews.html' %}
                             </ul>
                         </div>
                         <div class="product-details-frame">
                             <h3 class="frame-title">add your review</h3>
-                            <form class="review-form" method="post" action="{% url 'products:add_review' object.slug %}">
+                            <form id="reviewForm" class="review-form" method="post" action="{% url 'products:add_review' object.slug %}">
                                 {% csrf_token %}
                                 <div class="row">
                                     <div class="col-lg-12">
@@ -692,6 +668,33 @@
         </section>
         <!--=====================================
                  PRODUCT RELATED PART END
-        =======================================-->
+        
+         =======================================-->
+         <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+        <script>
+            // reviewForm
+            $(document).ready(function(e){
+
+                // submit reviewForm
+                $(document).on('submit','#reviewForm',function(e){
+                    e.preventDefault(); // refresh
+                
+                    $.ajax({
+                        type: $(this).attr('method'),
+                        url: $(this).attr('action'),
+                        data: $(this).serialize(),
+                        datatype:'json',
+                        success:function(response){
+                            consol.log(response)
+                            $('#all_reviews').html(response['result'])
+                        }
+
+                    })
+                })
+            })
+        </script>
+
+
+
 
         {% endblock body %}
