--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -89,8 +89,10 @@
                                 </ul>
                             </div>
                             <div class="details-add-group row">
-                                <form action="/orders/add_to_cart" method="post">
+                                <form id="add-to-cart-form" action="{% url 'orders:add_to_cart' %}" method="post">
                                     {% csrf_token %}
+
+
                                     <div class="col-lg-5">
                                         <input title="Quantity Number" type="text" name="quantity" value="1">
                                         <input type="hidden" name="product_id" value="{{object.id}}">
@@ -692,6 +694,25 @@
                     })
                 })
             })
+
+                // add to cart
+                $(document).on('submit','#add-to-cart-form',function(e){
+                    e.preventDefault(); // refresh
+                
+                    $.ajax({
+                        type: $(this).attr('method'),
+                        url: $(this).attr('action'),
+                        data: $(this).serialize(),
+                        datatype:'json',
+                        success:function(response){
+                            consol.log(response)
+                            $('#cart-sidebar').html(response['result'])
+                            var smallTag = $ ('#total_price');
+                            smallTag.text(response['total']);
+                        }
+
+                    })
+                })
         </script>
 
 
