add fbv cach & cbv cashe

--- a/products/templates/products/debug.html
+++ b/products/templates/products/debug.html
@@ -14,7 +14,7 @@
 
    
       {% for post in data  %}
-         <li>{{post}}</li>
+         <li>{{post}} - {{post.brand}}</li>
      {% endfor %}
     
    
