--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,13 +1,16 @@
-{% extends 'base.html'  %}
+{% extends 'base.html' %}
 {% load static %}
 
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'ltr/css/product-details.css' %}">
 {% endblock css %}
+    
+
+
 
 {% block body %}
-
+    
         <!--=====================================
                     BANNER PART START
         =======================================-->
@@ -39,14 +42,14 @@
                                 <label class="details-label off">-10%</label>
                             </div>
                             <ul class="details-preview"> 
-                                {% for image in object.product_images.all %}
-                                <li><img src="{{image.image.url}}" alt="product"></li>
-                                {% endfor %}
                                 
+                                {% for image in object.product_images.all %}
+                                    <li><img src="{{image.image.url}}" alt="product"></li>
+                                {% endfor %}
                             </ul>
                             <ul class="details-thumb">
                                 {% for image in object.product_images.all %}
-                                <li><img src="{{image.image.url}}" alt="product"></li>
+                                    <li><img src="{{image.image.url}}" alt="product"></li>
                                 {% endfor %}
                             </ul>
                         </div>
@@ -64,10 +67,9 @@
                                 <i class="active icofont-star"></i>
                                 <i class="active icofont-star"></i>
                                 <i class="icofont-star"></i>
-                                <a href="#"></a>
+                                <a href="#">(3 reviews)</a>
                             </div>
                             <h3 class="details-price">
-                                
                                 <span>${{object.price}}</span>
                             </h3>
                             <p class="details-desc">{{object.subtitle|safe}}</p>
@@ -92,7 +94,6 @@
                                 <form id="add-to-cart-form" action="{% url 'orders:add_to_cart' %}" method="post">
                                     {% csrf_token %}
 
-
                                     <div class="col-lg-5">
                                         <input title="Quantity Number" type="text" name="quantity" value="1">
                                         <input type="hidden" name="product_id" value="{{object.id}}">
@@ -109,10 +110,6 @@
                                 <a class="details-wish wish" href="#" title="Add Your Wishlist">
                                     <i class="icofont-heart"></i>
                                     <span>add to wish</span>
-                                </a>
-                                <a class="details-compare" href="compare.html" title="Compare This Item">
-                                    <i class="fas fa-random"></i>
-                                    <span>Compare This</span>
                                 </a>
                             </div>
                         </div>
@@ -140,7 +137,7 @@
                         </div>
                         <div class="product-details-frame">
                             <h3 class="frame-title">Reviews ({{object.product_review.all|length}})</h3>
-                            <ul class="review-list"  id="all-reviews">
+                            <ul class="review-list" id="all-reviews">
                                 {% include 'include/all_reviews.html' %}
                             </ul>
                         </div>
@@ -670,52 +667,50 @@
         </section>
         <!--=====================================
                  PRODUCT RELATED PART END
-        
-         =======================================-->
-         <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+        =======================================-->
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
         <script>
-            // reviewForm
             $(document).ready(function(e){
 
                 // submit reviewForm
                 $(document).on('submit','#reviewForm',function(e){
                     e.preventDefault(); // refresh
-                
+                    
                     $.ajax({
-                        type: $(this).attr('method'),
-                        url: $(this).attr('action'),
+                        type: $(this).attr('method') , 
+                        url: $(this).attr('action') , 
                         data: $(this).serialize(),
-                        datatype:'json',
+                        dataType: 'json',
                         success:function(response){
-                            consol.log(response)
-                            $('#all_reviews').html(response['result'])
+                            $('#all-reviews').html(response['result'])
+                            $("#reviewForm").trigger('reset');
                         }
-
                     })
                 })
-            })
 
-                // add to cart
+
+                // add to cart 
                 $(document).on('submit','#add-to-cart-form',function(e){
                     e.preventDefault(); // refresh
-                
+                    
                     $.ajax({
-                        type: $(this).attr('method'),
-                        url: $(this).attr('action'),
+                        type: $(this).attr('method') , 
+                        url: $(this).attr('action') , 
                         data: $(this).serialize(),
-                        datatype:'json',
+                        dataType: 'json',
                         success:function(response){
-                            consol.log(response)
                             $('#cart-sidebar').html(response['result'])
-                            var smallTag = $ ('#total_price');
+                            var smallTag = $('#total_price');
                             smallTag.text(response['total']);
                         }
-
                     })
                 })
+
+
+            })
         </script>
 
 
 
 
-        {% endblock body %}
+  {% endblock body %}   
